adeguamento endopit e schema commit precedente
